@@ -4,3 +4,10 @@ dependencies {
 
     testImplementation libs.curator.test
 }
+
+// To use @SetEnvironmentVariable
+if (project.ext.testJavaVersion >= 16) {
+    tasks.withType(Test) {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED'
+    }
+}
